Improve Device module